--- a/1.Excessive trust in client-side controls.md
+++ b/1.Excessive trust in client-side controls.md
@@ -14,3 +14,5 @@ buy items for an unintended price
 - at first, with the hint of the lab "*an unintended price*" I try to change the price in cart page.But it doesn't work.
 - I try to define the attack vector, enum each of them. After that I find that *in item detail page, the price is embedded in client-side and attach to request.*
   -> edit the price in request to 1$ and buy.
+
+![1.png](https://trello-attachments.s3.amazonaws.com/5ff9d67e36a15642dcbbbcdc/60f62ea9b8d33a43863cf37c/c2f09a3756c8b18e9e88dbf4777a43d3/image.png)
