--- a/3.Low-level logic flaw.md
+++ b/3.Low-level logic flaw.md
@@ -14,3 +14,4 @@ buy items for an unintended price
 
 - call API to add 99 multiple time
 - the cart money will come from 0 -> MAX -> -MAX -> 0 -> small number that we can charge.
+![4.png](https://trello-attachments.s3.amazonaws.com/5ff9d67e36a15642dcbbbcdc/60f62ea9b8d33a43863cf37c/f13348c02377747177c67f837d0e71e2/image.png)
