--- a/5.Inconsistent security controls.md
+++ b/5.Inconsistent security controls.md
@@ -14,3 +14,4 @@ access administrative functionality that should only be available to company emp
 ## exploit
 
 - reg a new acc -> login -> update email to admin format.
+[image.png](https://trello-attachments.s3.amazonaws.com/5ff9d67e36a15642dcbbbcdc/60f62ea9b8d33a43863cf37c/ccdeb7d71da3f73881e9a5783602541f/image.png)
